# AI-News-Aggregation---Summerization

./: .gitignore  README.md  app.py  feedsummarizer.py  main.py  main1.py  news_summaries.csv  news_summaries.json  news_summaries_old.json  pyproject.toml  requirements.txt  rss_feeds.json
rss-frontend/: package-lock.json  package.json
rss-frontend/public/: index.html
rss-frontend/src/: App.css  App.js  api.js  index.css
rss-frontend/src/components/HomePage/: HomePage.css  HomePage.jsx
rss-frontend/src/components/ManageFeeds/: ManageFeeds.css  ManageFeeds.jsx
