[project]
name = "feedsummarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "feedparser>=6.0.11",
    "gradio>=5.37.0",
    "requests>=2.32.4",
]
